Update common/Taskfile.yml.liquid, common/.config/taskfiles/install/Taskfile-software.yml, common/.config/taskfiles/upstream/Taskfile-project.yml

--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -784,8 +784,13 @@ tasks:
       - type qemu-system-x86_64 > /dev/null
 
   node:
+    deps:
+      - volta
     run: once
     cmds:
+      -
+    status:
+      - type node &> /dev/null
       - task: install:software
         vars:
           PACKAGE: node
