--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -1263,6 +1263,7 @@ tasks:
   volta:
     cmds:
       - curl https://get.volta.sh | bash
+      - volta setup
     status:
       - type volta > /dev/null
 
