--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -882,6 +882,9 @@ tasks:
       - task: system
         vars:
           PACKAGE: python3-pip
+      - task: system
+        vars:
+          PACKAGE: python3-venv
     status:
       - '[ "$(which python3)" != "/usr/bin/python3" ]'
 
