--- a/common/.config/taskfiles/git/Taskfile-github.yml
+++ b/common/.config/taskfiles/git/Taskfile-github.yml
@@ -63,7 +63,15 @@ tasks:
   ssh-keys:
     deps:
       - :install:software:gh
+      - :install:software:jq
     cmds:
+      - .config/log info 'Clearing GitLab SSH keys'
+      - |
+        ACCEPT_HEADER="Accept: application/vnd.github+json"
+        GH_KEYS_URL="https://api.github.com/user/keys"
+        for KEYID in $(curl -sSL -H "$ACCEPT_HEADER" -H "Authorization: token $GITHUB_TOKEN" "$GH_KEYS_URL" | jq '.[].id'); do
+          curl -H "$ACCEPT_HEADER" -H "Authorization: token $GITHUB_TOKEN" -X DELETE "$GH_KEYS_URL/$KEYID"
+        done
       - .config/log start 'Syncing SSH keys with GitHub'
       - |
         for KEY in `ls $HOME/.ssh/*.pub`; do
