--- a/common/.config/taskfiles/git/Taskfile-github.yml
+++ b/common/.config/taskfiles/git/Taskfile-github.yml
@@ -69,7 +69,8 @@ tasks:
       - |
         ACCEPT_HEADER="Accept: application/vnd.github+json"
         GH_KEYS_URL="https://api.github.com/user/keys"
-        for KEYID in $(curl -sSL -H "$ACCEPT_HEADER" -H "Authorization: token $GITHUB_TOKEN" "$GH_KEYS_URL" | jq '.[].id'); do
+        KEYIDS="$(curl -sSL -H "$ACCEPT_HEADER" -H "Authorization: token $GITHUB_TOKEN" "$GH_KEYS_URL" | jq '.[].id')"
+        for KEYID in $KEYIDS; do
           curl -H "$ACCEPT_HEADER" -H "Authorization: token $GITHUB_TOKEN" -X DELETE "$GH_KEYS_URL/$KEYID"
         done
       - .config/log start 'Syncing SSH keys with GitHub'
