--- a/common/.config/taskfiles/ansible/Taskfile.yml
+++ b/common/.config/taskfiles/ansible/Taskfile.yml
@@ -95,6 +95,8 @@ tasks:
         fi
       - cmd: '{{.PYTHON_HANDLE}} ansible-galaxy install -r requirements.yml --ignore-errors'
         ignore_error: true
+    sources:
+      - requirements.yml
 
   init:
     cmds:
