--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     }
   ],
   "jscpd": {
+    "absolute": true,
     "gitignore": true,
     "ignore": [
       ".devcontainer/**/*",
@@ -148,7 +149,7 @@
       "local/package-lock.json",
       "local/yarn.lock"
     ],
-    "threshold": 3
+    "threshold": 14
   },
   "lint-staged": {
     "(Brewfile|composer.lock|Gemfile|Gopkg.lock|Pipfile.lock)": [
