--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -1276,6 +1276,14 @@ tasks:
     status:
       - '[ -z "$(which yum)" ]'
 
+  task:
+    run: once
+    cmds:
+      - |
+        if [[ "$(which task)" == *'.local/bin/task' ]] && command -v brew > /dev/null && ! brew list go-task/tap/go-task; then
+          brew install go-task/tap/go-task
+        fi
+
   tokei:
     run: once
     cmds:
