--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -154,6 +154,12 @@ tasks:
     cmds:
       - task: common:windows
 
+  bundle:
+    deps:
+      - brew
+    cmds:
+      - brew tap Homebrew/bundle
+
   codeclimate:
     cmds:
       - task: install:software
