--- a/common/.config/taskfiles/ansible/Taskfile.yml
+++ b/common/.config/taskfiles/ansible/Taskfile.yml
@@ -343,7 +343,7 @@ tasks:
                 export MOLECULE_GROUP="qubes"
               else
                 .config/log info 'Assuming machine to be macOS/Linux'
-                export MOLECULE_GROUP="localhost"
+                export MOLECULE_GROUP="standard"
               fi
             fi
           fi
