--- a/common/.config/taskfiles/common/Taskfile-update.yml
+++ b/common/.config/taskfiles/common/Taskfile-update.yml
@@ -253,21 +253,13 @@ tasks:
       start: Generating `README.md`
       success: Generated README.md successfully
     cmds:
-      - |
-        if [ -f logo-backup.png ]; then
-          mv logo-backup.png logo.png
-        fi
-      - |
-        if [ -f "docs/img/logo-full.png" ]; then
-          mv logo.png logo-backup.png
-          cp docs/img/logo-full.png logo.png
-        fi
       - >
         readme generate --headingPrefix '{}' --silent --config .variables.json
         --input ".config/docs/{{.README_TEMPLATE}}"
       - |
-        if [ -f logo-backup.png ]; then
-          mv logo-backup.png logo.png
+        if [ -f docs/img/logo-full.png ]; then
+          sed -i 's/\/-\/raw\/master\/logo.png/\/-\/raw\/master\/docs\/img\/logo-full.png/' README.md
+          sed -i 's/width="148" height="148"/height="69"/' README.md
         fi
       - task: markdown:scrub
         vars:
