--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -560,7 +560,7 @@ tasks:
         git add --all
       - |
         .config/log info 'Bypassing git hooks'
-        HUSKY=0 git commit -m "\U0001F527 chore(tweak): quick minor update" --no-verify'
+        HUSKY=0 git commit -m "\U0001F527 chore(tweak): quick minor update" --no-verify
       - git push origin master
   devcontainer:
     deps:
@@ -842,7 +842,9 @@ tasks:
       start: Publishing `semantic-release` update via `task publish:force`
       success: Successfully published update via `task publish:force`
     cmds:
-      - "HUSKY=0 git commit -a --allow-empty -m '\U0001F528 chore(bump): Forced semantic-release {{.UPDATE_LEVEL}}' -n\n"
+      - |
+        .config/log info 'Bypassing git hooks for git commit'
+        HUSKY=0 git commit -a --allow-empty -m '\U0001F528 chore(bump): Forced semantic-release {{.UPDATE_LEVEL}}' --no-verify
       - task: publish
   pull:upstream:
     desc: Pull from upstream repositories
